src/objects/SBQQ__ProductOption__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__AppliedImmediatelyContext__c</fullName>
        <description>&apos;Apply Immediately on Select&apos; applies changes immediately on selection of product, whereas &apos;Apply Immediately on Quantity Change&apos; does that on change of quantity. &apos;Always&apos; applies changes both the times, on selection of product and on change of quantity.</description>
        <inlineHelpText>&apos;Apply Immediately on Select&apos; applies changes immediately on selection of product, whereas &apos;Apply Immediately on Quantity Change&apos; does that on change of quantity. &apos;Always&apos; applies changes both the times, on selection of product and on change of quantity.</inlineHelpText>
        <label>Apply Immediately Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>On Selection</fullName>
                </value>
                <value>
                    <fullName>On Quantity Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AppliedImmediately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates changes to this option should apply immediately.</description>
        <inlineHelpText>Select the checkbox to immediately apply changes to this option. Use sparingly to avoid slow user experience.</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that related product is bundled with the main product. Bundled options have fixed quantity and zero price.</description>
        <inlineHelpText>Select the checkbox to indicate that the related product is bundled with the main product. Bundled options have fixed quantity and zero price as price is included in the main product. Leave this unchecked if the price should be added to the option.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCodePosition__c</fullName>
        <description>Position of this component in the generated product code for the configuration.</description>
        <inlineHelpText>Position of this component in the generated product code for the configuration.</inlineHelpText>
        <label>Component Code Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCode__c</fullName>
        <description>Code for the component represented by this option. This is used in conjunction with the Configured Code Pattern field on the Product object.</description>
        <inlineHelpText>Code for the component represented by this option.</inlineHelpText>
        <label>Component Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDescriptionPosition__c</fullName>
        <description>Position of this component in the generated product description for the configuration.</description>
        <inlineHelpText>Position of this component in the generated product description for the configuration.</inlineHelpText>
        <label>Component Description Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDescription__c</fullName>
        <description>Description for the component represented by this option. This is used in conjunction with the Configured Description Pattern field on the Product object.</description>
        <inlineHelpText>Description for the component represented by this option. This is used in conjunction with the Configured Description Pattern field on the Product object.</inlineHelpText>
        <label>Component Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product SKU of the bundle that is being configured with this option. If you create the option from the product detail page, this should already be populated.</description>
        <inlineHelpText>Product SKU of the bundle that is being configured with this option. If you create the option from the product detail page, this should already be populated.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultPricingTable__c</fullName>
        <inlineHelpText>Select the pricing table this product should appear in by default when price dimensions are defined.</inlineHelpText>
        <label>Default Pricing Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segmented</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountAmount__c</fullName>
        <description>Discount (Amt), based on the field, when the product referenced for this option is offered standalone. But, you&apos;ll need to extend a discount if purchased a part of this product bundled.</description>
        <inlineHelpText>Discount (Amt), based on the field, when the product referenced for this option is offered standalone. But, you&apos;ll need to extend a discount if purchased a part of this product bundled.</inlineHelpText>
        <label>Discount (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be applied to the product selected by this option. This discount schedule overrides the discount schedule selected on the product or feature.</description>
        <inlineHelpText>Lookup the discount schedule to be applied to the product selected by this option. This discount schedule overrides the discount schedule selected on the product or feature.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Discount (%), based on the field, when the product referenced for this option is offered standalone. But, you&apos;ll need to extend a discount if purchased a part of this product bundled.</description>
        <inlineHelpText>Enter a Discount (%), based on the field, when the product referenced for this option is offered standalone. But, you&apos;ll need to extend a discount if purchased a part of this product bundled.</inlineHelpText>
        <label>Discount (%)</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that quote lines generated from this component should pick up additional discount from the parent package line. Only percentage based discount can be inherited.</description>
        <inlineHelpText>Check to automatically apply additional discount from parent package to this component. Only percentage-based discount can be applied.</inlineHelpText>
        <label>Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExistingQuantity__c</fullName>
        <description>Existing quantity of this product. Computed by looking at the assets attached to the account.</description>
        <inlineHelpText>Existing quantity of this product. Computed by looking at the assets attached to the account.</inlineHelpText>
        <label>Existing Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature that selects this option.</description>
        <inlineHelpText>Enter or lookup the feature that includes this option. This will be dependent on the Configured SKU.</inlineHelpText>
        <label>Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ConfiguredSKU__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__MaxQuantity__c</fullName>
        <description>Maximum quantity allowed for this option.</description>
        <inlineHelpText>Maximum quantity allowed for this option.</inlineHelpText>
        <label>Max Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__MinQuantity__c</fullName>
        <description>Minimum quantity allowed for this option.</description>
        <inlineHelpText>Minimum quantity allowed for this option.</inlineHelpText>
        <label>Min Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Sequential number that determines this option&apos;s sort order.</description>
        <inlineHelpText>Set the display order of this option within the feature it&apos;s assigned to.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionalSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product SKU added if this option is selected.</description>
        <inlineHelpText>Enter or lookup the product SKU that should be added when this product is selected.</inlineHelpText>
        <label>Optional SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Optional For</relationshipLabel>
        <relationshipName>OptionalFor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <description>Brings over the value of Price Editable field on the optional SKU in order to avoid loading optional product just to know if the price is editable.</description>
        <formula>IF(SBQQ__OptionalSKU__r.SBQQ__PriceEditable__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <inlineHelpText>Select to mark the price as editable, allowing users to make changes to option prices.</inlineHelpText>
        <label>Price Editable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductCode__c</fullName>
        <description>Product Code for the optional product SKU.</description>
        <formula>SBQQ__OptionalSKU__r.ProductCode</formula>
        <inlineHelpText>Product Code for the optional product SKU.</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductConfigurationType__c</fullName>
        <description>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.SBQQ__ConfigurationType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</inlineHelpText>
        <label>Product Configuration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductDescription__c</fullName>
        <description>Description for the optional SKU.</description>
        <formula>SBQQ__OptionalSKU__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Description for the optional SKU.</inlineHelpText>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductFamily__c</fullName>
        <description>Product Family for the optional product SKU.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.Family)</formula>
        <inlineHelpText>Product Family for the optional product SKU.</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductName__c</fullName>
        <description>Name for the optional SKU.</description>
        <formula>SBQQ__OptionalSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name for the optional SKU.</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductQuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <formula>SBQQ__OptionalSKU__r.SBQQ__QuantityScale__c</formula>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Product Quantity Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSubscriptionPricing__c</fullName>
        <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.SBQQ__SubscriptionPricing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</inlineHelpText>
        <label>Product Subscription Pricing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether option quantity is editable regardless of Quantity being specified.</description>
        <inlineHelpText>Check to allow quantity to be edited even though it&apos;s specified on the option.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity of the related product that should be added to the quote.</description>
        <inlineHelpText>Quantity of the related product that should be added to the quote.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLineVisibility__c</fullName>
        <description>Determines when quote line generated by this option is visible. If your product bundle components are only used to calculate the price of the bundle, you can hide components from users by using this field.</description>
        <inlineHelpText>Configure visibility of quote line generated by this option.</inlineHelpText>
        <label>Quote Line Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Editor Only</fullName>
                </value>
                <value>
                    <fullName>Document Only</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that replaces this product option on renewal.</description>
        <inlineHelpText>Product option that replaces this product option on renewal. Use this to quote a different SKU when renewing.</inlineHelpText>
        <label>Renewal Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this component is required or not.</description>
        <inlineHelpText>Select the checkbox if this product is required on the bundle.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this option should be selected by default.</description>
        <inlineHelpText>Select the checkbox if this product option should be automatically selected by default.</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionScope__c</fullName>
        <description>Specifies percent of total calculation scope for percent of total priced products added as product options.</description>
        <inlineHelpText>Choose how this percent of total product option is calculated. Package is specific to the parent product. Components is specific to sibling components. Both is specific to the parent and sibling components.</inlineHelpText>
        <label>Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this option as managed by the system which means users can not manually select or deselect.</description>
        <inlineHelpText>Select the checkbox to indicate this option is managed by the system which makes it unavailable for user selection.</inlineHelpText>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of this option.</description>
        <inlineHelpText>Use &quot;Component&quot; if this option, including quantity, is dependent on parent. Use&quot; Accessory&quot; if this option is dependent on parent but quantity is independent. Use &quot;Related Product&quot; for related but fully independent products.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                    <default>true</default>
                    <label>Component</label>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UnitPrice__c</fullName>
        <description>Unit price for this option. This will override the value from price book.</description>
        <inlineHelpText>Unit price for this option. This will override the value from price book.</inlineHelpText>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</description>
        <inlineHelpText>Check to automatically apply uplift from parent package to this component. Only applies to components that are multi-segmented products.</inlineHelpText>
        <label>Uplifted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Charge__c</fullName>
        <description>Service Charge picklist for Air Conditioning Product Option</description>
        <inlineHelpText>Service Charge picklist for Air Conditioning Product Option</inlineHelpText>
        <label>Service Charge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excluded</fullName>
                    <default>true</default>
                    <label>Excluded</label>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serviced_Internet_Bandwidth__c</fullName>
        <label>Serviced Internet Bandwidth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2Mb</fullName>
                </value>
                <value>
                    <fullName>5Mb</fullName>
                </value>
                <value>
                    <fullName>10Mb</fullName>
                </value>
                <value>
                    <fullName>20Mb</fullName>
                </value>
                <value>
                    <fullName>50Mb</fullName>
                </value>
                <value>
                    <fullName>100Mb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_Meter__c</fullName>
        <label>Shared Meter?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Term__c</fullName>
        <label>Start Term</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suite_Available_From_Date__c</fullName>
        <label>Suite Available From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suite_Incumbent_End_Date__c</fullName>
        <label>Suite Incumbent End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suite_Incumbent_Start_Date__c</fullName>
        <label>Suite Incumbent Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suite_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suite Inventory</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5 AND 6) OR (1 AND 2 AND 5 AND 7)</booleanFilter>
            <filterItems>
                <field>Inventory__c.Property_for_Filter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Property_for_Filter__c</valueField>
            </filterItems>
            <filterItems>
                <field>Inventory__c.Quanta__c</field>
                <operation>equals</operation>
                <valueField>$Source.Quanta__c</valueField>
            </filterItems>
            <filterItems>
                <field>Inventory__c.Sales_Status__c</field>
                <operation>equals</operation>
                <value>Available, Terms out</value>
            </filterItems>
            <filterItems>
                <field>Inventory__c.Suite_Status__c</field>
                <operation>notEqual</operation>
                <value>Obsolete</value>
            </filterItems>
            <filterItems>
                <field>Inventory__c.Quanta__c</field>
                <operation>equals</operation>
                <value>Lab, Retail, Office, Storage, SerLic, DedLic, DeskLic</value>
            </filterItems>
            <filterItems>
                <field>$Source.Quote_Type__c</field>
                <operation>equals</operation>
                <value>New Deal</value>
            </filterItems>
            <filterItems>
                <field>$Source.Quote_Type__c</field>
                <operation>equals</operation>
                <value>Renewal, Surrender and regrant</value>
            </filterItems>
            <infoMessage>- Inventory should be a part of the Quote Property;
- Suite Status = Proposed OR Actual;
- Sales Status = Available OR Not Available - Licensed</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Product Options (Suite Inventory)</relationshipLabel>
        <relationshipName>Product_Options2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppliers_Contribution__c</fullName>
        <label>Suppliers Contribution (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Certain__c</fullName>
        <label>Term Certain</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Concessions__c</fullName>
        <label>Term Concessions</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tolerance_State__c</fullName>
        <label>Tolerance State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Guarantor__c</fullName>
        <label>Type of Guarantor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upd_Inventory_Cost_per_space_Total__c</fullName>
        <label>Upd Inventory Cost per space Total (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Annual_Price_per_Sq_Ft__c</fullName>
        <description>Updated Annual Price per Sq. Ft. (£)</description>
        <label>Updated Annual Price per Sq. Ft. (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Inventory_Cost_per_space__c</fullName>
        <label>Updated Inventory Cost per space (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Monthly_Average__c</fullName>
        <label>Updated Monthly Average (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Price_per_sq_ft__c</fullName>
        <label>Updated Price per sq ft (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Rent_Per_Workstation__c</fullName>
        <label>Updated Rent Per Workstation (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_rent_per_Workstation_annual__c</fullName>
        <description>Updated rent per Workstation annual (£)</description>
        <label>Updated rent per Workstation annual (£)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>When_to_Start_the_Term__c</fullName>
        <label>When to Start the Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completion of Lease</fullName>
                </value>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
                <value>
                    <fullName>End of Customers Existing Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Works_Prior_to_Lease_Start__c</fullName>
        <label>Works Prior to Lease Start?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Works_undertaken__c</fullName>
        <description>Works undertaken for CAT A/B Fit-out by Supplier Product Option</description>
        <inlineHelpText>Works undertaken for CAT A/B Fit-out by Supplier Product Option</inlineHelpText>
        <label>Works undertaken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>list</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__ProductName__c</columns>
        <filterScope>Mine</filterScope>
        <label>list</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Apply_Immediately_Context_Validation</fullName>
        <active>true</active>
        <description>The &apos;Apply Immediately&apos; field must be checked before providing an &apos;Apply Immediately Context&apos;. Otherwise, please change the &apos;Apply Immediately Context&apos; field to ‘None&apos;.</description>
        <errorConditionFormula>AND(TEXT(SBQQ__AppliedImmediatelyContext__c) != null, SBQQ__AppliedImmediately__c == false)</errorConditionFormula>
        <errorMessage>The &apos;Apply Immediately&apos; field must be checked before providing an &apos;Apply Immediately Context&apos;. Otherwise, please change the &apos;Apply Immediately Context&apos; field to ‘None&apos;.</errorMessage>
    </validationRules>
</CustomObject>